--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-scripts": "5.0.1",
     "redux-persist": "6.0.0",
     "styled-components": "5.3.5",
-    "typescript": "4.8.3",
     "uniqid": "5.4.0",
     "web-vitals": "2.1.4"
   },
@@ -45,5 +44,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "eslint": "^8.23.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.8",
+    "typescript": "^4.8.3"
   }
 }
