Сделал все доступным, настроил анимацию меню и описания.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "SalaryCalc",
-  "name": "SalaryCalc App by Navfront",
+  "name": "SalaryCalc App by Navfront.ru",
   "icons": [
     {
       "src": "favicon.ico",
